# rustyclaw

./: .gitignore  Cargo.toml  README.md  config.example.yaml  memory.md  soul.md
src/: lib.rs
src/agent/: mod.rs
src/config/: mod.rs
src/memory/: mod.rs
src/scheduler/: mod.rs
src/telegram/: mod.rs
src/tui/: mod.rs
src/workspace/: mod.rs
