[package]
name = "rustyclaw"
version = "0.1.0"
edition = "2021"
description = "A lightweight, local AI assistant — Rust port of PiLobster"
license = "MIT"
authors = ["PiLobster Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-nativetls"] }
ratatui = "0.29"
crossterm = "0.28"
regex = "1"

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio-util = "0.7"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
